# OpenAI-Agent-Template

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  registry.py  runtime.py  schemas.py
src/agent/memory/: __init__.py  session.py
src/agent/models/: fireworks.py  openai.py  settings.py
src/agent/prompt/: __init__.py  base_prompt.yaml  example.py  tool_use.yaml  utils.py
src/agent/tools/: __init__.py  example.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py  deps.py  routers.py
src/app/api/v1/: __init__.py  schemas.py
src/app/api/v1/endpoints/: base.py  doc.py  (+1 more)
src/app/core/: __init__.py  config.py  container.py  init_settings.py  lifespan.py  logging.py  middlewares.py  routers.py
src/app/lifecycle/: __init__.py  lifespan.py
src/app/middleware/: __init__.py  cors.py  docs_guard.py  session.py
src/chain/: runtime.py
src/chain/prompt/: example.py
src/db/: __init__.py  crud.py  database.py  models.py
src/db/crud/: __init__.py  message.py
src/db/migrations/: alembic.ini  env.py
src/db/models/: __init__.py  message.py
src/db/schemas/: __init__.py  message.py
src/integrations/: __init__.py  openai_client.py
src/ui/: __init__.py  gradio_app.py
src/ui/gradio/: chat_history.py  components.py  config.py  event_listeners.py  styles.py  utils.py
src/ui/gradio/agent_demo/: app.py  components.py  event_listeners.py
src/ui/gradio/chat_demo/: app.py  components.py  event_listeners.py  styles.py
tests/: __init__.py  test_agent.py  test_health.py
