[project]
name = "openai-agent-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.2",
    "gradio>=5.46.0",
    "greenlet>=3.2.4",
    "itsdangerous>=2.2.0",
    "nest-asyncio>=1.6.0",
    "openai-agents>=0.3.0",
    "openai[aiohttp]>=1.108.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
